# ChatGPTPluginLambdaBacked

./: README.md  app.py  pyproject.toml
chat_gpt_plugin_lambda_backed/: chat_gpt_plugin_lambda_backed_stack.py
lambdas/: gen_ideas.py  hello.py
lambdas/hello1/: Dockerfile  app.py  pyproject.toml
