[tool.poetry]
name = "querylambda"
version = "0.1.0"
description = ""
authors = ["Anatolii Burtsev <ab.canada.world@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dirtyjson = "^1.0.8"
langchain = "^0.0.207"
google-api-core = "^2.11.1"
google-api-python-client = "^2.90.0"
google-auth = "^2.20.0"
boto3 = "^1.26.157"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
